--- a/index.html
+++ b/index.html
@@ -1,100 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sunshine Electronics</title>
   <style>
     body {
+      font-family: 'Arial', sans-serif;
       margin: 0;
-      font-family: Arial, sans-serif;
       background-color: #fff;
       color: #000;
     }
     header {
-      text-align: center;
-      padding: 2rem;
-      border-bottom: 2px solid #000;
-    }
-    header img {
-      width: 100px;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem;
       background: #000;
       color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 30px;
+    }
+    .logo {
+      height: 50px;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+    }
+    #hero {
+      text-align: center;
+      padding: 60px 20px;
+      background: #eee;
     }
     section {
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
+      padding: 40px 20px;
     }
-    form {
+    .product-grid {
       display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      gap: 20px;
+      flex-wrap: wrap;
     }
-    input, textarea {
-      padding: 0.5rem;
-      border: 1px solid #000;
-      border-radius: 4px;
+    .product {
+      flex: 1;
+      min-width: 200px;
+      background: #f9f9f9;
+      padding: 15px;
+      border: 1px solid #ddd;
     }
-    button {
-      padding: 0.5rem;
+    .forms {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+    .forms form {
+      background: #f2f2f2;
+      padding: 20px;
+      flex: 1;
+      min-width: 300px;
+    }
+    form label {
+      display: block;
+      margin-bottom: 10px;
+    }
+    form input, form textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+    }
+    form button {
       background: #000;
       color: #fff;
+      padding: 10px 15px;
       border: none;
-      border-radius: 4px;
       cursor: pointer;
     }
     footer {
       text-align: center;
-      padding: 1rem;
-      border-top: 2px solid #000;
+      padding: 20px;
+      background: #000;
+      color: #fff;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="file-1L2jhoUujw5JA3giy2b5FD" alt="Sunshine Electronics Logo">
-    <h1>Sunshine Electronics</h1>
+    <img src="assets/logo.png" alt="Sunshine Electronics Logo" class="logo" />
+    <nav>
+      <ul>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <nav>
-    <a href="#lead">Web to Lead</a>
-    <a href="#case">Web to Case</a>
-  </nav>
-
-  <section id="lead">
-    <h2>Contact Us (Lead Form)</h2>
-    <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
-      <input type="hidden" name="oid" value="YOUR_SALESFORCE_OID_HERE">
-      <input type="text" name="first_name" placeholder="First Name" required>
-      <input type="text" name="last_name" placeholder="Last Name" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="tel" name="phone" placeholder="Phone">
-      <textarea name="description" placeholder="Tell us what you're looking for..."></textarea>
-      <button type="submit">Submit Lead</button>
-    </form>
+  <section id="hero">
+    <h1>Welcome to Sunshine Electronics</h1>
+    <p>Modern tech. Classic design. Pure performance.</p>
   </section>
 
-  <section id="case">
-    <h2>Customer Support (Case Form)</h2>
-    <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
-      <input type="hidden" name="orgid" value="YOUR_SALESFORCE_ORGID_HERE">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="subject" placeholder="Subject" required>
-      <textarea name="description" placeholder="Describe your issue" required></textarea>
-      <button type="submit">Submit Case</button>
-    </form>
+  <section id="about">
+    <h2>About Us</h2>
+    <p>Sunshine Electronics is your trusted tech partner delivering premium electronics with innovation and integrity. Based in Addis Ababa, we serve customers across Africa.</p>
+  </section>
+
+  <section id="products">
+    <h2>Our Products</h2>
+    <div class="product-grid">
+      <div class="product">
+        <h3>Smartphones</h3>
+        <p>Latest Android and iOS models.</p>
+      </div>
+      <div class="product">
+        <h3>Laptops</h3>
+        <p>Performance and portability for work and play.</p>
+      </div>
+      <div class="product">
+        <h3>Accessories</h3>
+        <p>Cables, chargers, headphones & more.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Gadget Repairs</li>
+      <li>Business Bulk Orders</li>
+      <li>Smart Home Installations</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+
+    <div class="forms">
+      <div>
+        <h3>Salesforce Web-to-Lead</h3>
+        <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
+          <input type="hidden" name="oid" value="YOUR_SALESFORCE_OID_HERE" />
+          <label>First Name:<input type="text" name="first_name" required /></label>
+          <label>Last Name:<input type="text" name="last_name" required /></label>
+          <label>Email:<input type="email" name="email" required /></label>
+          <label>Company:<input type="text" name="company" required /></label>
+          <button type="submit">Submit Lead</button>
+        </form>
+      </div>
+
+      <div>
+        <h3>Salesforce Web-to-Case</h3>
+        <form action="https://yourInstance.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
+          <input type="hidden" name="orgid" value="YOUR_SALESFORCE_ORGID_HERE" />
+          <label>Contact Name:<input type="text" name="name" required /></label>
+          <label>Email:<input type="email" name="email" required /></label>
+          <label>Subject:<input type="text" name="subject" required /></label>
+          <label>Description:<textarea name="description" required></textarea></label>
+          <button type="submit">Submit Case</button>
+        </form>
+      </div>
+    </div>
   </section>
 
   <footer>
-    &copy; 2025 Sunshine Electronics. All rights reserved.
+    <p>&copy; 2025 Sunshine Electronics. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
